--- a/contact.html
+++ b/contact.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Kuya Ram | Contact</title>
+  <title>Noob Coder | Contact</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="contact">
   <header>
-    <h1>KUYA RAM</h1>
+    <h1>NOOB CODER</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="projects.html">Projects</a>
@@ -19,7 +19,7 @@
   <main class="contact">
     <h2>Contact Me</h2>
     <p>Email: <a href="kuyaram@gmail.com">kuyaram@gmail.com</a></p>
-    <p>Facebook: <a href="https://facebook.com/kuyaram" target="_blank">https://facebook.com/kuyaram</a></p>
+    <p>Facebook: <a href="https://www.facebook.com/share/1J7D5GyYG2/" target="_blank">https://facebook.com/kuyaram</a></p>
   </main>
 
   <footer>
